updated with changes to selection

--- a/src/dx-excshell-1/ext.config.yaml
+++ b/src/dx-excshell-1/ext.config.yaml
@@ -43,7 +43,7 @@ runtimeManifest:
           runtime: 'nodejs:14'
           inputs:
             LOG_LEVEL: debug
-            LEARNER_ID: leaner1
+            LEARNER_ID: learner1
           annotations:
             require-adobe-auth: false
             final: true
@@ -53,7 +53,7 @@ runtimeManifest:
           runtime: 'nodejs:14'
           inputs:
             LOG_LEVEL: debug
-            LEARNER_ID: leaner2
+            LEARNER_ID: learner2
           annotations:
             require-adobe-auth: false
             final: true
