--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@spectrum-icons/workflow": "^3.2.0",
     "core-js": "^3.6.4",
     "form-data": "^4.0.0",
+    "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.0",
     "react": "^16.13.1",
