--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@spectrum-css/table": "^4.0.15",
     "@spectrum-css/typography": "^4.0.16",
     "@spectrum-icons/workflow": "^3.2.0",
+    "ace-builds": "^1.4.14",
     "core-js": "^3.6.4",
     "form-data": "^4.0.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.0",
     "react": "^16.13.1",
+    "react-ace": "^9.5.0",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^16.13.1",
     "react-error-boundary": "^1.2.5",
     "react-router-dom": "^5.2.0",
