--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@adobe/aio-lib-state": "^1.1.2",
     "@adobe/aio-sdk": "^3.0.0",
     "@adobe/exc-app": "^0.2.21",
     "@adobe/react-spectrum": "^3.16.5",
@@ -14,7 +15,9 @@
     "form-data": "^4.0.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "node-fetch": "^2.6.0",
+    "piesocket-nodejs": "^1.1.0",
     "react": "^16.13.1",
     "react-ace": "^9.5.0",
     "react-copy-to-clipboard": "^5.0.4",
