--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "regenerator-runtime": "^0.13.5"
   },
   "devDependencies": {
-    "jest": "^27.2.4",
-    "@openwhisk/wskdebug": "^1.3.0",
     "@babel/core": "^7.8.7",
+    "@babel/plugin-transform-react-jsx": "^7.8.3",
     "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
-    "@babel/plugin-transform-react-jsx": "^7.8.3"
+    "@openwhisk/wskdebug": "^1.3.0",
+    "jest": "^27.2.4"
   },
   "scripts": {
     "test": "jest --passWithNoTests ./test",
