updating to use sockets

--- a/src/dx-excshell-1/ext.config.yaml
+++ b/src/dx-excshell-1/ext.config.yaml
@@ -43,6 +43,9 @@ runtimeManifest:
           runtime: 'nodejs:14'
           inputs:
             LOG_LEVEL: debug
+            SOCKET_CLUSTER_ID: demo
+            SOCKET_API_KEY: VCXCEuvhGcBDP7XhiJJUDvR1e1D3eiVjgZ9VRiaV
+            SOCKET_API_SECRET: Fvev5c0k59VZ1jRLWuj5URyF5idSdHWm
           annotations:
             require-adobe-auth: false
             final: true
