--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react-dom": "^16.13.1",
     "react-error-boundary": "^1.2.5",
     "react-router-dom": "^5.2.0",
-    "regenerator-runtime": "^0.13.5",
-    "unirest": "^0.6.0"
+    "regenerator-runtime": "^0.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
