--- a/src/dx-excshell-1/ext.config.yaml
+++ b/src/dx-excshell-1/ext.config.yaml
@@ -15,9 +15,9 @@ runtimeManifest:
           runtime: 'nodejs:16'
           inputs:
             LOG_LEVEL: debug
-            SOCKET_CLUSTER_ID: demo
-            SOCKET_API_KEY: VCXCEuvhGcBDP7XhiJJUDvR1e1D3eiVjgZ9VRiaV
-            SOCKET_API_SECRET: Fvev5c0k59VZ1jRLWuj5URyF5idSdHWm
+            SOCKET_CLUSTER_ID: s8983.nyc1
+            SOCKET_API_KEY: GyeZdkQKCwpthQoV9rOryCHhLJWiOPxLQ9o7seUI
+            SOCKET_API_SECRET: pWmFZiz0apCNIX8wWDHN36SudvBsNp5O
           annotations:
             require-adobe-auth: false
             final: true
