--- a/.github/workflows/deploy_stage.yml
+++ b/.github/workflows/deploy_stage.yml
@@ -55,6 +55,9 @@ jobs:
           AIO_PROJECT_WORKSPACE_ID: ${{ secrets.AIO_PROJECT_WORKSPACE_ID_STAGE }}
           AIO_PROJECT_WORKSPACE_NAME: ${{ secrets.AIO_PROJECT_WORKSPACE_NAME_STAGE }}
           AIO_PROJECT_WORKSPACE_DETAILS_SERVICES: ${{ secrets.AIO_PROJECT_WORKSPACE_DETAILS_SERVICES_STAGE }}
+          SOCKET_CLUSTER_ID: ${{secrets.SOCKET_CLUSTER_ID_STAGE}}
+          SOCKET_API_KEY: ${{secrets.SOCKET_API_KEY_STAGE}}
+          SOCKET_API_SECRET: ${{secrets.SOCKET_API_SECRET_STAGE}}
         uses: adobe/aio-apps-action@2.0.1
         with:
           os: ${{ matrix.os }}
