--- a/package.json
+++ b/package.json
@@ -3,35 +3,36 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@adobe/aio-lib-state": "^1.1.3",
+    "@adobe/generator-app-excshell": "^0.2.4",
+    "@adobe/aio-lib-state": "^2.1.2",
     "@adobe/aio-sdk": "^3.0.0",
     "@adobe/exc-app": "^0.2.21",
-    "@adobe/react-spectrum": "^3.29.0",
+    "@adobe/react-spectrum": "^3.4.0",
     "@react-spectrum/list": "^3.6.1",
     "@spectrum-css/table": "^4.0.66",
-    "@spectrum-css/typography": "^4.0.31",
-    "@spectrum-icons/workflow": "^3.2.0",
+    "@spectrum-css/typography": "^5.0.32",
+    "@spectrum-icons/workflow": "^4.2.3",
     "ace-builds": "^1.24.0",
-    "core-js": "^3.32.0",
+    "core-js": "^3.6.4",
     "form-data": "^4.0.0",
     "js-cookie": "^3.0.5",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.1",
     "moment": "^2.29.4",
-    "node-fetch": "^2.6.12",
+    "node-fetch": "^2.6.0",
     "piesocket-nodejs": "^1.1.0",
     "react": "^16.13.1",
-    "react-ace": "^9.5.0",
-    "react-copy-to-clipboard": "^5.0.4",
+    "react-ace": "^10.1.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^16.13.1",
     "react-error-boundary": "^1.2.5",
-    "react-router-dom": "^5.3.4",
-    "regenerator-runtime": "^0.13.11"
+    "react-router-dom": "^5.2.0",
+    "regenerator-runtime": "^0.14.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.10",
-    "@babel/plugin-transform-react-jsx": "^7.22.5",
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-transform-react-jsx": "^7.8.3",
     "@babel/polyfill": "^7.8.7",
-    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-env": "^7.8.7",
     "@openwhisk/wskdebug": "^1.3.0",
     "jest": "^27.2.4"
   },
@@ -40,6 +41,6 @@
     "e2e": "jest --collectCoverage=false --testRegex ./e2e"
   },
   "engines": {
-    "node": "^12 || ^14 || ^16"
+    "node": "^14 || ^16"
   }
 }
