--- a/.github/workflows/pr_test.yml
+++ b/.github/workflows/pr_test.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         node-version: ['16']
-        os: [macOS-latest, ubuntu-latest, windows-latest]
+        os: [ubuntu-latest]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
